--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -1,23 +1,10 @@
 body {
-    text-align: center;
-    font-family:'Poppins', sans-serif;
-    border: 5px inset rgb(245, 39, 39);
-    background-color: rgb(172, 72, 72);
-   
+    border: 2px solid green;
+    padding-right: 40px;
+    padding-left: 40px;
 }
 
-.letra {
-    font-size: 20px;
+.aa {
+    padding-top: 40px;
 }
 
-.logoCinema {
-    max-width: 100px;
-}
-
-.letra2 {
-    font-size: 30px;
-}
-
-.linha {
-    border: 5px inset rgb(245, 39, 39);
-}
