--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -68,7 +68,7 @@ div li a:hover{
     color: blue;
 }
 .azul{
-    color: blue;
+    color: green;
 }
 
 
@@ -79,3 +79,10 @@ div li a:hover{
 .branco {
     color: red;
 }
+
+.arruma {
+    padding-top: 40px;
+    padding-left:100px;
+    padding-right: 100px;
+    padding-bottom: 30px;
+} 
